manifests/k8s/stages/dev/app-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shareschool
spec:
  template:
    spec:
      containers:
        - name: shareschool
