manifests/k8s/stages/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shareschool-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev.shareschool.tn
      secretName: shareschool-dev-tls
  rules:
    - host: dev.shareschool.tn
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: shareschool
                port:
                  number: 80
